[package]
name = "micro"
version = "0.1.0"
authorss = ["Valerii Lysenko <vallyscode@gmail.com>"]
description = "Experimental programming language"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[peofile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
